--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0+2
   intl: ^0.16.0
+  flutter_spinkit: ^4.1.0
 
 dev_dependencies:
   flutter_test:
